# wa-crypt-tools

./: -1212979777_Transfer Dock_Text_20250604023423.txt_temp  .coveragerc  .gitignore  CHANGELOG  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jupyter version.ipynb  README.md  SECURITY.md  crypt12.java  decrypt12.java  decrypt12.py  decrypt14.py  decrypt14_15.py  decrypt15.py  decrypt_metadata.py  loop.py  notebook.ipynb  pyproject.toml  requirements.txt  start.bat  wa.db.crypt14
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pypi.yaml
.github/ISSUE_TEMPLATE/: can-t-decrypt.md
.github/workflows/: codeql-analysis.yml  lint-test-coverage.yml  lint-test.yml  pypi.yml
.ipynb_checkpoints/utils/: WA_HMACSHA256_Loop.java  password_data_key_to_hashcat.py  protobuf_bruteforce.py
git-hooks/: pre-commit
password_data_key_utils/: password_data_key_to_hashcat.py
proto/: C14_cipher.proto  C14_cipher_pb2.py  C14_cipher_version.proto  C14_cipher_version_pb2.py  C15_IV.proto  C15_IV_pb2.py  C15_header.proto  C15_header_pb2.py  C15_metadata.proto  C15_metadata_pb2.py  backup_expiry.proto  backup_prefix.proto  key_type.proto  key_type_pb2.py  prefix.proto  prefix_pb2.py  version_features.proto  version_features_pb2.py
src/: decrypt14_15.py  encrypt.py
src/lib/: common_utils.py  constants.py  key.py
src/proto/: C14_cipher_pb2.py  C15_IV.proto  prefix_pb2.py  version_features.proto  version_features_pb2.py
src/wa_crypt_tools/: __init__.py  wacreatekey.py  wadecrypt.py  waencrypt.py  waguess.py  wainfo.py
src/wa_crypt_tools/lib/: constants.py  database.py  databasefactory.py  key.py  keyfactory.py  log.py  logformat.py  props.py  utils.py
src/wa_crypt_tools/lib/db/: db.py  db12.py  db14.py  db15.py  dbfactory.py
src/wa_crypt_tools/lib/key/: key.py  key14.py  key15.py  keyfactory.py
src/wa_crypt_tools/lib/mcrypt/: mcrypt.py  mcrypt1.py  mcryptfactory.py
src/wa_crypt_tools/proto/: C14_cipher_pb2.py  C14_cipher_version_pb2.py  C15_IV_pb2.py  backup_expiry_pb2.py  backup_prefix_pb2.py  key_type_pb2.py  prefix_pb2.py  version_features_pb2.py
tests/: test_createkey.py  test_decrypt.py  test_encrypt.py  test_waencrypt.py
tests/lib/: test_constants.py  test_utils.py
tests/lib/db/: test_db.py
tests/res/: empty-db.sql  empty-db.zlib1  encrypted_backup.key  key  msgstore-noprops.db.crypt14  msgstore.db  msgstore.db.crypt12  msgstore.db.crypt14  msgstore.db.crypt15  test.json
tests/tools-invocation/: test_wacreatekey.py
tests/utils/: utils.py
utils/: hex_string_to_encrypted_backup_key.py  msgstore.crypt15.proto  password_data_key_to_hashcat.py  protobuf_bruteforce.py
utils/proto/crypt15/: IV.proto  msgstore.crypt15.proto  version_and_jid.proto
whatsapp-decrypter/: decrypt14_15.py
whatsapp_decrypter/: decrypt14_15.py
whatsapp_decrypter/proto/: C14_cipher_pb2.py  C15_IV_pb2.py  key_type.proto  key_type_pb2.py  prefix_pb2.py
